# PHANOTATE-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bump-version.sh  install.sh  pyproject.toml
.github/workflows/: bioconda.yml.disabled  pypi.yml  python-tests.yml  release.yml  rust-tests.yml
benches/: README.md  baseline.txt  baseline_perf_report.txt  phanotate_benchmark.rs
memory/: progress_2026-06-06T14:29:50Z.md
notebooks/: 01_train_hybrid_scorer.ipynb  README.md  requirements.txt
notebooks/models/: README.md
packaging/conda/: bld.bat  build.sh  meta.yaml
packaging/homebrew/: phanotate-rs.rb
scripts/: export_pytorch_onnx.py  export_tree_onnx.py  generate_training_labels.py  train_model.py
src/: bellman_ford.rs  codon_table.rs  detect_table.rs  gcfp.rs  genome.rs  graph.rs  lib.rs  lib_python.rs  main.rs  ml_features.rs  ml_scorer.rs  orf.rs  output.rs  overlap.rs  weights.rs
tests/: cli_tests.rs  detect_table_tests.rs  test_python_bindings.py
tests/data/: 100_genomes_accessions.txt
tests/golden/: NC_000866.1.tabular  NC_001416.1.tabular  crass_infant_BK025033.fa  phiX174.fasta_out  phiX174.genbank  phiX174.tabular
