[package]
name = "phanotate-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
atty = "0.2"
clap = { version = "4.5", features = ["derive"] }
indicatif = { version = "0.17", features = ["rayon"] }
num-bigint = "0.4.6"
rayon = "1.12.0"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4"
tempfile = "3"

[[bench]]
name = "phanotate_benchmark"
harness = false
