[package]
name = "phanotate-rs"
version = "0.1.3"
edition = "2021"
authors = ["Yasas Wijesekara <yasas.wijesekara@uni-greifswald.de>", "Lars Kaderali <lars.kaderali@uni-greifswald.de>"]
description = "A fast Rust implementation of PHANOTATE with automatic genetic-code detection for phage genomes"
license = "GPL-3.0"
repository = "https://github.com/Yasas1994/PHANOTATE-rs"
homepage = "https://github.com/Yasas1994/PHANOTATE-rs"
readme = "README.md"
keywords = ["bioinformatics", "genomics", "phage", "gene-calling", "annotation"]
categories = ["science", "command-line-utilities"]
rust-version = "1.70"

[dependencies]
anyhow = "1.0"
atty = "0.2"
clap = { version = "4.5", features = ["derive"] }
indicatif = { version = "0.17", features = ["rayon"] }
num-bigint = "0.4.6"
rayon = "1.12.0"

[dependencies.pyo3]
version = "0.1.3"
features = ["extension-module"]
optional = true

[features]
default = []
python = ["dep:pyo3"]

[lib]
name = "phanotate_rs"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4"
tempfile = "3"

[[bench]]
name = "phanotate_benchmark"
harness = false
